<resources>
    <string name="main_menu">Main Menu</string>
    <string name="left_bar">Left Bar</string>
    <string name="cart_icon">Shopping Cart</string>
    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="foods">Foods</string>
    <string name="foods_image">Foods image</string>
    <string name="top_up">Top Up</string>
    <string name="top_up_image">Top up image</string>
    <string name="your_order_complete_n_thank_you">Your order complete Thank You</string>
    <string name="app_name">KazKoreanApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="kazkorean_app">KazKorean App</string>
    <string name="hi_here_you_can_become_even_more_beautiful">Hi,here you can become even more beautiful</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="kazkorean_APP">KazKorean APP</string>
    <string name="full_name">full_name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="don_t_have_an_account">Don\'t have An Account?</string>
    <string name="favourite">Favourite</string>
    <string name="grocery">Grocery</string>
    <string name="my_cart">My cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kuzembaev9029_gmail_com">kuzembaev9029@gmail.com</string>
    <string name="log_out">Log out</string>
    <string name="welcome_to_kazkorean">Welcome to KazKorean</string>
    <string name="shampoo">Shampoo</string>
    <string name="detaildescription">detailDescription</string>
    <string name="perfume">Perfume</string>
    <string name="lipsticks">Lipsticks</string>
    <string name="lipsticks_image">Lipsticks image</string>
    <string name="cream">Cream</string>
    <string name="cream_image">Cream image</string>
</resources>